# montandon-etl

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  sample.env  schema.graphql
apps/common/: dataloaders.py  models.py  types.py
apps/common/management/commands/: generate_schema.py
apps/common/migrations/: 0001_initial.py  0002_delete_country_delete_region.py
apps/etl/: admin.py  dataloaders.py  enums.py  extract.py  filters.py  glide_task.py  loaders.py  models.py  queries.py  tasks.py  transformer.py  types.py  utils.py
apps/etl/desinventar/: extract.py  task.py  transform.py
apps/etl/etl_tasks/: desinventar.py  gdacs.py  glide.py
apps/etl/extraction/sources/base/: extract.py
apps/etl/extraction_validators/: gdacs_events_validator.py  gdacs_eventsdata.py  gdacs_eventsdata_geometry_validator.py  gdacs_geometry.py  gdacs_main_source.py  gdacs_pop_exposure.py  gdacs_pop_exposure_validator.py
apps/etl/load/sources/: base.py  gdacs.py  glide.py
apps/etl/management/commands/: import_desinventar_data.py  import_gdacs_data.py  import_glide_data.py  load_data_to_stac.py
apps/etl/migrations/: 0001_initial.py  0002_extractiondata_source_validation_fail_reason_and_more.py  0003_extractiondata_resp_data_type.py  0004_alter_extractiondata_resp_type_and_more.py  0005_rename_source_validation_fail_reason_extractiondata_content_validation.py  0006_extractiondata_file_hash_extractiondata_revision_id_and_more.py  0007_extractiondata_resp_text.py  0008_extractiondata_hazard_type.py  0009_gdacstransformation.py  0010_alter_gdacstransformation_item_type_and_more.py  0011_alter_extractiondata_hazard_type.py  0012_alter_extractiondata_source.py  0013_glidetransformation.py  0014_gdacstransformation_load_status_and_more.py  0015_glidetransformation_item_type.py  0016_glidetransformation_load_status_and_more.py  0017_alter_extractiondata_parent.py  0018_stacitem_transformation.py
apps/etl/stac_loaders/: glide_loader.py
apps/etl/transform/sources/: desinventar.py  gdacs.py  glide.py
apps/etl/transformers/: glide_transformer.py
etl_montandon/: asgi.py  settings.py  wsgi.py
main/: asgi.py  schema.py  settings.py  urls.py  wsgi.py
main/graphql/: context.py  dataloaders.py  schema.py
scripts/: run_worker.sh  run_worker_beat.sh
(+4 files in other folders)
