[project]
name = "montandon-etl"
version = "0.1.0"
description = ""
authors = [{ name = "Togglecorp Dev", email = "dev@togglecorp.com" }]
requires-python = "~=3.12"
readme = "README.md"
dependencies = [
    "django>=5.1.3,<6",
    "django-environ",
    "psycopg2-binary>=2.9.9,<3",
    "flake8>=7.1.1,<8",
    "celery[redis]>=5.4.0,<6",
    "django-redis>=5.4.0,<6",
    "django-celery-beat>=2.7.0,<3",
    "pandas>=2.2.3,<3",
    "lxml>=5.3.0,<6",
    "pydantic>=2.10.2,<3",
    "pystac-monty",
    "requests>=2.32.3",
    "geopandas",
]

[tool.uv.sources]
pystac-monty = { path = "libs/pystac-monty", editable = true }

[tool.black]
line-length = 125
# NOTE: Update in .pre-commit-config.yaml as well
extend-exclude = "(__pycache__|.*snap_test_.*\\.py|.+\\/.+\\/migrations\\/.*)"

[tool.isort]
profile = "black"
multi_line_output = 3
skip = [
    "**/__pycache__",
    "**/snap_test_*.py",
    ".venv/",
    "**/migrations/*.py",
]

[tool.pyright]
exclude = [
    "**/__pycache__",
    "**/snap_test_*.py",
    ".venv/",
    "**/migrations/*.py",
]
reportMissingImports = true
reportMissingTypeStubs = false
venvPath = "."
venv = ".venv"
